--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,30 +4,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="bottom"
-    android:paddingLeft="10dp"
+
+    android:padding="20dp"
     android:orientation="vertical"
     tools:context=".MainActivity">
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    >
 
-    <TextView
-        android:id="@+id/nameText"
+    <Button
+        android:id="@+id/btnLog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/name"
-        android:textColor="@color/black"
-        android:textIsSelectable="true"
-        android:textColorHighlight="@color/green"
+        android:text="@string/log"
+        android:textSize="12sp"
+        />
 
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <Button
+        android:id="@+id/btnOut"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/logout"
+        android:textSize="12sp"
+        />
+</LinearLayout>
+
 
     <TextView
         android:id="@+id/dText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/life"
         android:textSize="12sp"
         android:textAlignment="center"
         android:textIsSelectable="true"
